--- a/views/admin/base.pug
+++ b/views/admin/base.pug
@@ -6,7 +6,7 @@ html
       meta(name="viewport" content="width=device-width, initial-scale=1.0")  
       link(rel='stylesheet' href='/css/main.css')
       title Panel-admin | #{title}
-      <link rel="shortcut icon" type="image/jpg" href="/img/h2o.jpg"/>
+      <link rel="shortcut icon" type="image/jpg" href="/img/logo.png"/>
       <script data-ad-client="ca-pub-6454722215270594" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   body
