--- a/views/admin/login.pug
+++ b/views/admin/login.pug
@@ -5,10 +5,10 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' href='/css/main.css')
-    title H2O League | Login panel admin
+    title MGPL div1 | Login panel admin
   body.d-flex.text-center.bg-secondary
     form.form-login
-      img.mb-4(src=`/img/h2o.jpg` alt='' height='72' width='72')
+      img.mb-4(src=`/img/logo.png` alt='' height='72' width='72')
       h1.h3.mb-3.font-weight-normal Login panel-admin
       label.visually-hidden(for='email') Email address
       input#email.form-control.mb-2.ip-3(type='email' placeholder='Email address' required autofocus)
