--- a/views/main/_footer.pug
+++ b/views/main/_footer.pug
@@ -1,6 +1,6 @@
 footer.text-center.py-3.bg-dark.text-white
-  p Copyright H2O League &copy 2021
+  p Copyright MGPL &copy 2021
   p contact us for more informations
-  a.text-white(href='https://www.instagram.com/h2o_league') Instagram
+  a.text-white(href='https://www.instagram.com/mobilegameproleague') Instagram
   br
-  a.text-white(href='https://api.whatsapp.com/send/?phone=089532029873') Whatsapp
+  a.text-white(href='https://api.whatsapp.com/send/?phone=085155249225') Whatsapp
