--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -9,6 +9,6 @@ $dark: #0b082e;
 $utilities: () !default;
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
-@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
 @import 'style';
 @import 'admin';
