--- a/views/main/about.pug
+++ b/views/main/about.pug
@@ -6,7 +6,7 @@ block content
       .row.justify-content-center.mt-4.text-center
         .col-md-6
           h2 ABOUT US 
-          p H2O League adalah ajang liga magic chess bang bang
+          p MGPL adalah ajang liga magic chess bang bang
 
           a(href='/img/rules.pdf') Rules
-          img.img-thumbnail.h2o(src="/img/h2o.jpg", alt="")
+          img.img-thumbnail.h2o(src="/img/logo.png", alt="")
