--- a/views/main/base.pug
+++ b/views/main/base.pug
@@ -5,8 +5,8 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' href='/css/main.css')
-    title H2O League
-    <link rel="shortcut icon" type="image/jpg" href="/img/h2o.jpg"/>
+    title MGPL - DIV 1
+    <link rel="shortcut icon" type="image/png" href="/img/logo.png"/>
     <script data-ad-client="ca-pub-6454722215270594" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   body
