--- a/views/admin/manageSchedule.pug
+++ b/views/admin/manageSchedule.pug
@@ -85,9 +85,9 @@ block content
                 label.form-label(for='mvp2') mvp m2
                 select#mvp2.form-select(aria-label='Default select example')
 
-              .mb-3  
-                label.form-label(for='screenshoots') screenshoots images
-                input#screenshoots.form-control(type='file' accept='image/*' name='screenshoots' multiple)              
+              //- .mb-3  
+              //-   label.form-label(for='screenshoots') screenshoots images
+              //-   input#screenshoots.form-control(type='file' accept='image/*' name='screenshoots' multiple)              
           .modal-footer
             button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
             button.btn.btn-primary(type='submit' form="formaddresult") Add Result
