--- a/views/admin/_sidenav.pug
+++ b/views/admin/_sidenav.pug
@@ -2,7 +2,7 @@ nav#sidebarMenu.col-md-3.col-lg-2.d-md-block.bg-light.sidebar.collapse
   .position-sticky.pt-3
     ul.nav.flex-column
       li.nav-item
-        a.nav-link.active(aria-current='page' href='/panel-admin')
+        a.nav-link(aria-current='page' href='/panel-admin')
           span(data-feather='home')
           | Dashboard
       li.nav-item
@@ -17,8 +17,16 @@ nav#sidebarMenu.col-md-3.col-lg-2.d-md-block.bg-light.sidebar.collapse
         a.nav-link(href='/panel-admin/start')
           span(data-feather='edit')
           | Start League
+      li.nav-item
+        a.nav-link(href='/panel-admin/streamer')
+          span(data-feather='edit')
+          | Streamer
+      li.nav-item
+        a.nav-link(href='/panel-admin/news')
+          span(data-feather='edit')
+          | Info
       hr.mx-3
       li.nav-item
-        a.nav-link.btn-logout(href='#')
+        a.nav-link.text-danger.btn-logout(href='#')
           span(data-feather='edit')
-          | LOGOUT
+          | logout
