--- a/views/main/_header.pug
+++ b/views/main/_header.pug
@@ -21,9 +21,9 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.sticky-top.navbar--top
               Dropdown Divisi 1
             </button>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-              <li><a class="dropdown-item active" href="#">Divisi 1</a></li>
-              <li><a class="dropdown-item" href="#">Divisi 2</a></li>
-              <li><a class="dropdown-item" href="#">Divisi 3</a></li>
+              <li><a class="dropdown-item active" href="https://mgpl.herokuapp.com">Divisi 1</a></li>
+              <li><a class="dropdown-item" href="https://d2-mgpl.herokuapp.com">Divisi 2</a></li>
+              <li><a class="dropdown-item" href="https://d3-mgpl.herokuapp.com">Divisi 3</a></li>
             </ul>
           </div>
         
