--- a/views/main/about.pug
+++ b/views/main/about.pug
@@ -8,5 +8,5 @@ block content
           h2 ABOUT US 
           p MGPL adalah ajang liga magic chess bang bang
 
-          a(href='/img/rules.pdf') Rules
+          a(href='#') Rules
           img.img-thumbnail.h2o(src="/img/logo.png", alt="")
