--- a/views/main/mvp.pug
+++ b/views/main/mvp.pug
@@ -5,7 +5,7 @@ block content
     .container
       .row.my-4
         .col
-          h2.text-center TOP MVP H2O League 
+          h2.text-center TOP MVP MGPL Div 1 
       .row.pb-4  
         .col-8.col-md-9       
           table.table.table-striped.align-middle.text-center
