--- a/views/main/teams.pug
+++ b/views/main/teams.pug
@@ -11,4 +11,4 @@ block content
         each team in teams
           .col-md-2.col-3.mb-3
             a(href=`/teams/${team.slug}`)
-              img.img-thumbnail(src=`/img/teams/${team.logo}` alt='...')
+              img.img-thumbnail(src=team.logo_url alt='...')
