--- a/views/admin/manageTeams.pug
+++ b/views/admin/manageTeams.pug
@@ -21,7 +21,7 @@ block content
               tr
                 th(scope='row')= `${i+1}`
                 td 
-                  img(src=`/img/teams/${team.logo}` width='50')
+                  img(src=team.logo_url width='50')
                 td=team.name
                 td
                   a(href=`/panel-admin/manage-teams/${team.id}`)
@@ -83,7 +83,7 @@ block content
                 textarea#descriptionU.form-control(rows='3')
               .mb-3  
                 label.form-label.d-block(for='logo') Logo images
-                <img src="" class="img-thumbnail img-logo mb-3" width="100" alt="">
+                <img src="" class="img-thumbnail img-logo mb-3 d-none" width="100" alt="">
                 input#logoU.form-control(type='file' accept='image/*' name='logo')
               .mb-3 
           .modal-footer
