--- a/views/main/mvp.pug
+++ b/views/main/mvp.pug
@@ -5,7 +5,7 @@ block content
     .container
       .row.my-4
         .col
-          h2.text-center TOP MVP MGPL Div 1 
+          h2.text-center TOP MVP 
       .row.pb-4  
         .col-8.col-md-9       
           table.table.table-striped.align-middle.text-center
@@ -21,7 +21,7 @@ block content
                 tr
                   th(scope='row')= `${i+1}`
                   td
-                    img(src=`/img/teams/${player.team.logo}` width='50')
+                    img(src=player.team.logo_url width='50')
                   td=player.nick
                   td=player.mvp
         .col-4.col-md-3
