--- a/views/admin/_sidenav.pug
+++ b/views/admin/_sidenav.pug
@@ -14,6 +14,10 @@ nav#sidebarMenu.col-md-3.col-lg-2.d-md-block.bg-light.sidebar.collapse
           span(data-feather='calendar')
           | Schedule
       li.nav-item
+        a.nav-link(href='/panel-admin/manage-day')
+          span(data-feather='calendar')
+          | day
+      li.nav-item
         a.nav-link(href='/panel-admin/start')
           span(data-feather='edit')
           | Start League
@@ -24,7 +28,7 @@ nav#sidebarMenu.col-md-3.col-lg-2.d-md-block.bg-light.sidebar.collapse
       li.nav-item
         a.nav-link(href='/panel-admin/news')
           span(data-feather='edit')
-          | Info
+          | sponsor
       hr.mx-3
       li.nav-item
         a.nav-link.text-danger.btn-logout(href='#')
