--- a/views/admin/manageStreamer.pug
+++ b/views/admin/manageStreamer.pug
@@ -20,7 +20,7 @@ block content
               tr
                 th(scope='row')= `${i+1}`
                 td 
-                  img(src=`/img/streamer/${s.photo}` width='200')
+                  img(src=`${s.photo_url}` width='200')
                 td
                   a.delete-streamer(href='#' data-id=`${s.id}`)
                     span.badge.bg-danger.fw-lighter delete
