--- a/views/admin/manageNews.pug
+++ b/views/admin/manageNews.pug
@@ -3,10 +3,10 @@ extends base
 block content
   main.col-md-9.ms-sm-auto.col-lg-10.px-md-4
     .d-flex.justify-content-between.flex-wrap.flex-md-nowrap.align-items-center.pt-3.pb-2.mb-3.border-bottom
-      h1.h2 Info Management
+      h1.h2 sponsor Management
     // Button trigger modal
     button.mb-3.btn.btn-primary(type='button' data-bs-toggle='modal' data-bs-target='#modalCreateNews')
-      | Create new Info
+      | Create new sponsor
     .row
       .col.text-center
         table.table.table-striped.align-middle
@@ -20,7 +20,7 @@ block content
               tr
                 th(scope='row')= `${i+1}`
                 td 
-                  img(src=`/img/news/${s.photo}` width='200')
+                  img(src=`${s.photo_url}` width='200')
                 td
                   a.delete-news(href='#' data-id=`${s.id}`)
                     span.badge.bg-danger.fw-lighter delete
