--- a/views/admin/manageSchedule.pug
+++ b/views/admin/manageSchedule.pug
@@ -12,7 +12,7 @@ block content
               if schedule.finish
                 tr
                   td
-                    img.img-fluid(src=`/img/teams/${schedule.t1.logo}` width='50' height='50' alt='')
+                    img.img-fluid(src=`${schedule.t1.logo_url}` width='50' height='50' alt='')
                   td  
                     a.text-decoration-none.text-dark(href=`/teams/${schedule.t1.slug}`)=schedule.t1.shortName
                   if (schedule.lose == schedule.t1.id)
@@ -27,14 +27,14 @@ block content
                   td
                     a.text-decoration-none.text-dark(href=`/teams/${schedule.t2.slug}`)=schedule.t2.shortName
                   td
-                    img.img-fluid(src=`/img/teams/${schedule.t2.logo}` width='50' height='50' alt='')
+                    img.img-fluid(src=`${schedule.t2.logo_url}` width='50' height='50' alt='')
                   td 
                     a.button-add-result(href='#' data-bs-toggle="modal" data-bs-target="#modalResult" data-id=`${schedule.id}`)
                       span.badge.bg-warning.fw-lighter.text-dark.me-2 add result
               else
                 tr
                   td
-                    img.img-fluid(src=`/img/teams/${schedule.t1.logo}` width='50' height='50' alt='')
+                    img.img-fluid(src=`${schedule.t1.logo_url}` width='50' height='50' alt='')
                   td  
                     a.text-decoration-none.text-dark(href=`/teams/${schedule.t1.slug}`)=schedule.t1.shortName
                   td.fw-bold -
@@ -43,7 +43,7 @@ block content
                   td
                     a.text-decoration-none.text-dark(href=`/teams/${schedule.t2.slug}`)=schedule.t2.shortName
                   td
-                    img.img-fluid(src=`/img/teams/${schedule.t2.logo}` width='50' height='50' alt='')
+                    img.img-fluid(src=`${schedule.t2.logo_url}` width='50' height='50' alt='')
                   td 
                     a.button-add-result(href='#' data-bs-toggle="modal" data-bs-target="#modalResult" data-id=`${schedule.id}`)
                       span.badge.bg-warning.fw-lighter.text-dark.me-2 add result
