--- a/views/admin/_sidenav.pug
+++ b/views/admin/_sidenav.pug
@@ -26,6 +26,10 @@ nav#sidebarMenu.col-md-3.col-lg-2.d-md-block.bg-light.sidebar.collapse
           span(data-feather='edit')
           | Streamer
       li.nav-item
+        a.nav-link(href='/panel-admin/sponsor')
+          span(data-feather='edit')
+          | News & Info
+      li.nav-item
         a.nav-link(href='/panel-admin/news')
           span(data-feather='edit')
           | sponsor
