--- a/views/main/_header.pug
+++ b/views/main/_header.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.sticky-top.navbar--top
   .container
-    a.navbar-brand(href='/') MGPL S3 - div 1
+    a.navbar-brand(href='/') MGPL - div 1
     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarNav.collapse.navbar-collapse
