--- a/views/main/about.pug
+++ b/views/main/about.pug
@@ -6,7 +6,7 @@ block content
       .row.justify-content-center.mt-4.text-center
         .col-md-6
           h2 ABOUT US 
-          p MGPL adalah ajang liga magic chess bang bang
+          p MGPL adalah ajang liga semua game mobile
 
           a(href='#') Rules
           img.img-thumbnail.h2o(src="/img/logo.png", alt="")
