--- a/views/main/overview.pug
+++ b/views/main/overview.pug
@@ -4,7 +4,7 @@ block jumbotron
   header
     .jumbotron
       h1.mb-3 MGPL - Divisi 1
-      p.mb-3 show us the best team in magic chess
+      p.mb-3 show us your best team
       ul.jumbo-list
         li.mb-3
           a(href='/schedule') Schedules
@@ -94,7 +94,33 @@ block content
             button.carousel-control-next(type='button', data-bs-target='#carouselExampleIndicators', data-bs-slide='next')
               span.carousel-control-next-icon(aria-hidden='true')
               span.visually-hidden Next
-          a(href='#') Hubungi kami jika ingin bergabung menjadi streamer
+          a(href='https://api.whatsapp.com/send/?phone=085155249225') Hubungi kami jika ingin bergabung menjadi streamer
+        .col-md-6
+          h2 Info & News 
+          #carouselExampleIndicators2.carousel.slide(data-bs-ride='carousel')
+            .carousel-indicators
+              each sponsor,i in sponsors
+                if(i == 0)
+                  button.active(type='button', data-bs-target='#carouselExampleIndicators2', data-bs-slide-to=`${i}`, aria-current='true', aria-label='Slide 1')
+                else 
+                  button(type='button', data-bs-target='#carouselExampleIndicators2', data-bs-slide-to=`${i}`, aria-current='true', aria-label=`Slide ${i+1}`)
+
+            .carousel-inner
+              each sponsor,i in sponsors
+                if(i == 0)
+                  .carousel-item.active
+                    img.d-block.w-100(src=`${sponsor.photo_url}`, alt='...')
+                else 
+                  .carousel-item
+                    img.d-block.w-100(src=`${sponsor.photo_url}`, alt='...')
+
+            button.carousel-control-prev(type='button', data-bs-target='#carouselExampleIndicators2', data-bs-slide='prev')
+              span.carousel-control-prev-icon(aria-hidden='true')
+              span.visually-hidden Previous
+            button.carousel-control-next(type='button', data-bs-target='#carouselExampleIndicators2', data-bs-slide='next')
+              span.carousel-control-next-icon(aria-hidden='true')
+              span.visually-hidden Next
+          br.my5
         .col-md-6
           h2 Sponsor 
           #carouselExampleIndicators2.carousel.slide(data-bs-ride='carousel')
